--- a/code/changing_cost_of_sunbelt_population_changes_due_to_climate_change.ipynb
+++ b/code/changing_cost_of_sunbelt_population_changes_due_to_climate_change.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "a28b3ff0",
    "metadata": {},
    "outputs": [],
@@ -11,66 +11,35 @@
     "from us import states\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import plotly.figure_factory as ff\n"
+    "import plotly.figure_factory as ff\n",
+    "\n",
+    "import censusdata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "0161340c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_key = \"b9187a8cf54ee740ccd1c01e6ae1c58f1d333132\""
+    "API_key = os.environ.get(API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "90cfeb75",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>B01003_001E</th>\n",
-       "      <th>state</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7050299.0</td>\n",
-       "      <td>04</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   B01003_001E state\n",
-       "0    7050299.0    04"
+       "<bound method NDFrame.head of    B01003_001E state\n",
+       "0    7050299.0    04>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,12 +48,12 @@
     "c = Census(\"b9187a8cf54ee740ccd1c01e6ae1c58f1d333132\")\n",
     "az_pop = c.acs5.state((\"B01003_001E\"), states.AZ.fips, year=2019)\n",
     "az_pop_df = pd.DataFrame(az_pop)\n",
-    "az_pop_df"
+    "az_pop_df.head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "e4dea255",
    "metadata": {},
    "outputs": [
@@ -107,7 +76,7 @@
        "[3220 rows x 5 columns]>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +96,11 @@
    "id": "1c322e5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# trying using `censusdata`\n",
+    "\n",
+    "az_counties_pop = censusdata.search('acs5', 2015, )"
+   ]
   }
  ],
  "metadata": {
