--- a/code/changing_cost_of_sunbelt_population_changes_due_to_climate_change.ipynb
+++ b/code/changing_cost_of_sunbelt_population_changes_due_to_climate_change.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "a28b3ff0",
    "metadata": {},
    "outputs": [],
@@ -11,35 +11,22 @@
     "from us import states\n",
     "import pandas as pd\n",
     "import requests\n",
-    "import plotly.figure_factory as ff\n"
+    "import earthpy as et\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "0161340c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'API_KEY'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m API_key \u001b[38;5;241m=\u001b[39m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mAPI_KEY\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "File \u001b[0;32m<frozen os>:679\u001b[0m, in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'API_KEY'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "API_key = os.environ['API_KEY']"
+    "API_key = ''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "id": "e28fe537",
    "metadata": {},
    "outputs": [
@@ -167,7 +154,7 @@
        "14        Yuma County    027"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 28,
    "id": "8bd2a298",
    "metadata": {},
    "outputs": [],
@@ -200,19 +187,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 29,
    "id": "e4dea255",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def AZ_county_pop(year:str, state:str):\n",
+    "def AZ_county_pop(year:str):\n",
     "    pop_url = f'https://api.census.gov/data/{year}/pep/population?get=POP,DENSITY&for=county:*&key={API_key}'\n",
     "    response = requests.get(pop_url)\n",
     "    pop_data = response.json()\n",
     "    pop_df = (pd.DataFrame(pop_data[1:], columns=pop_data[0]))\n",
     "    fips_to_name = states.mapping(\"fips\", \"name\")\n",
     "    pop_df[\"state_name\"] = pop_df[\"state\"].map(fips_to_name)\n",
-    "    az_pop_df = pop_df[pop_df[\"state_name\"]== f'{state}']\n",
+    "    az_pop_df = pop_df[pop_df[\"state_name\"]== 'Arizona']\n",
     "    az_pop_df.insert(2, \"year\", f'{year}')\n",
     "    df = get_county_names(az_pop_df, county_df)\n",
     "    return df"
@@ -220,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 30,
    "id": "1c322e5a",
    "metadata": {},
    "outputs": [
@@ -445,19 +432,19 @@
        "14       Pinal County  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "az2019_df = AZ_county_pop('2019', \"Arizona\")\n",
+    "az2019_df = AZ_county_pop('2019')\n",
     "az2019_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 31,
    "id": "874011ea",
    "metadata": {},
    "outputs": [
@@ -665,19 +652,31 @@
        "14    027   212128  38.470979394  2018    04    Arizona        Yuma County"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "az2018_df = AZ_county_pop('2018', \"Arizona\")\n",
+    "az2018_df = AZ_county_pop('2018')\n",
     "az2018_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 32,
+   "id": "593454f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az2017_df = AZ_county_pop('2017')\n",
+    "az2016_df = AZ_county_pop('2016')\n",
+    "az2015_df = AZ_county_pop('2015')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "bb40629b",
    "metadata": {},
    "outputs": [
@@ -763,257 +762,68 @@
        "      <td>Yuma County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>017</td>\n",
-       "      <td>110924</td>\n",
-       "      <td>11.14808127400000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Navajo County</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>013</td>\n",
-       "      <td>4485414</td>\n",
-       "      <td>487.50954904000000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Maricopa County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>009</td>\n",
-       "      <td>38837</td>\n",
-       "      <td>8.40286316820000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Graham County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>023</td>\n",
-       "      <td>46498</td>\n",
-       "      <td>37.61259939200000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Santa Cruz County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>012</td>\n",
-       "      <td>21108</td>\n",
-       "      <td>4.69446648860000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>La Paz County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>015</td>\n",
-       "      <td>212181</td>\n",
-       "      <td>15.91533295700000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Mohave County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>005</td>\n",
-       "      <td>143476</td>\n",
-       "      <td>7.70680924550000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Coconino County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>025</td>\n",
-       "      <td>235099</td>\n",
-       "      <td>28.94203510300000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Yavapai County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>011</td>\n",
-       "      <td>9498</td>\n",
-       "      <td>5.15595627040000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Greenlee County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>021</td>\n",
-       "      <td>462789</td>\n",
-       "      <td>86.24393453400000</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Pinal County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>001</td>\n",
-       "      <td>71818</td>\n",
-       "      <td>6.413768529</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Apache County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>003</td>\n",
-       "      <td>126770</td>\n",
-       "      <td>20.56427823</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Cochise County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>005</td>\n",
-       "      <td>142854</td>\n",
-       "      <td>7.6726192992</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Coconino County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>007</td>\n",
-       "      <td>53889</td>\n",
-       "      <td>11.325986655</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Gila County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>009</td>\n",
-       "      <td>38072</td>\n",
-       "      <td>8.2358796196</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Graham County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>011</td>\n",
-       "      <td>9483</td>\n",
-       "      <td>5.1482697863</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Greenlee County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>012</td>\n",
-       "      <td>21098</td>\n",
-       "      <td>4.6888309769</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>La Paz County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>013</td>\n",
-       "      <td>4410824</td>\n",
-       "      <td>479.4764304</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Maricopa County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>015</td>\n",
-       "      <td>209550</td>\n",
-       "      <td>15.742539574</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Mohave County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>017</td>\n",
-       "      <td>110445</td>\n",
-       "      <td>11.100123355</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>04</td>\n",
-       "      <td>Arizona</td>\n",
-       "      <td>Navajo County</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
+       "      <th>70</th>\n",
        "      <td>019</td>\n",
-       "      <td>1039073</td>\n",
-       "      <td>113.09979314</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>1010025</td>\n",
+       "      <td>109.9401888692</td>\n",
+       "      <td>2015</td>\n",
        "      <td>04</td>\n",
        "      <td>Arizona</td>\n",
        "      <td>Pima County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
+       "      <th>71</th>\n",
        "      <td>021</td>\n",
-       "      <td>447138</td>\n",
-       "      <td>83.330493702</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>406584</td>\n",
+       "      <td>75.7751743337</td>\n",
+       "      <td>2015</td>\n",
        "      <td>04</td>\n",
        "      <td>Arizona</td>\n",
        "      <td>Pinal County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27</th>\n",
+       "      <th>72</th>\n",
        "      <td>023</td>\n",
-       "      <td>46511</td>\n",
-       "      <td>37.602208146</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>46461</td>\n",
+       "      <td>37.5620184458</td>\n",
+       "      <td>2015</td>\n",
        "      <td>04</td>\n",
        "      <td>Arizona</td>\n",
        "      <td>Santa Cruz County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
+       "      <th>73</th>\n",
        "      <td>025</td>\n",
-       "      <td>231993</td>\n",
-       "      <td>28.558217746</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>222255</td>\n",
+       "      <td>27.3593141396</td>\n",
+       "      <td>2015</td>\n",
        "      <td>04</td>\n",
        "      <td>Arizona</td>\n",
        "      <td>Yavapai County</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>29</th>\n",
+       "      <th>74</th>\n",
        "      <td>027</td>\n",
-       "      <td>212128</td>\n",
-       "      <td>38.470979394</td>\n",
-       "      <td>2018</td>\n",
+       "      <td>204275</td>\n",
+       "      <td>37.0466139245</td>\n",
+       "      <td>2015</td>\n",
        "      <td>04</td>\n",
        "      <td>Arizona</td>\n",
        "      <td>Yuma County</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>75 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1023,31 +833,12 @@
        "2     003   125922   20.27811514400000  2019    04    Arizona   \n",
        "3     001    71887    6.41977244030000  2019    04    Arizona   \n",
        "4     027   213787   38.77280214200000  2019    04    Arizona   \n",
-       "5     017   110924   11.14808127400000  2019    04    Arizona   \n",
-       "6     013  4485414  487.50954904000000  2019    04    Arizona   \n",
-       "7     009    38837    8.40286316820000  2019    04    Arizona   \n",
-       "8     023    46498   37.61259939200000  2019    04    Arizona   \n",
-       "9     012    21108    4.69446648860000  2019    04    Arizona   \n",
-       "10    015   212181   15.91533295700000  2019    04    Arizona   \n",
-       "11    005   143476    7.70680924550000  2019    04    Arizona   \n",
-       "12    025   235099   28.94203510300000  2019    04    Arizona   \n",
-       "13    011     9498    5.15595627040000  2019    04    Arizona   \n",
-       "14    021   462789   86.24393453400000  2019    04    Arizona   \n",
-       "15    001    71818         6.413768529  2018    04    Arizona   \n",
-       "16    003   126770         20.56427823  2018    04    Arizona   \n",
-       "17    005   142854        7.6726192992  2018    04    Arizona   \n",
-       "18    007    53889        11.325986655  2018    04    Arizona   \n",
-       "19    009    38072        8.2358796196  2018    04    Arizona   \n",
-       "20    011     9483        5.1482697863  2018    04    Arizona   \n",
-       "21    012    21098        4.6888309769  2018    04    Arizona   \n",
-       "22    013  4410824         479.4764304  2018    04    Arizona   \n",
-       "23    015   209550        15.742539574  2018    04    Arizona   \n",
-       "24    017   110445        11.100123355  2018    04    Arizona   \n",
-       "25    019  1039073        113.09979314  2018    04    Arizona   \n",
-       "26    021   447138        83.330493702  2018    04    Arizona   \n",
-       "27    023    46511        37.602208146  2018    04    Arizona   \n",
-       "28    025   231993        28.558217746  2018    04    Arizona   \n",
-       "29    027   212128        38.470979394  2018    04    Arizona   \n",
+       "..    ...      ...                 ...   ...   ...        ...   \n",
+       "70    019  1010025      109.9401888692  2015    04    Arizona   \n",
+       "71    021   406584       75.7751743337  2015    04    Arizona   \n",
+       "72    023    46461       37.5620184458  2015    04    Arizona   \n",
+       "73    025   222255       27.3593141396  2015    04    Arizona   \n",
+       "74    027   204275       37.0466139245  2015    04    Arizona   \n",
        "\n",
        "          county_name  \n",
        "0         Pima County  \n",
@@ -1055,47 +846,59 @@
        "2      Cochise County  \n",
        "3       Apache County  \n",
        "4         Yuma County  \n",
-       "5       Navajo County  \n",
-       "6     Maricopa County  \n",
-       "7       Graham County  \n",
-       "8   Santa Cruz County  \n",
-       "9       La Paz County  \n",
-       "10      Mohave County  \n",
-       "11    Coconino County  \n",
-       "12     Yavapai County  \n",
-       "13    Greenlee County  \n",
-       "14       Pinal County  \n",
-       "15      Apache County  \n",
-       "16     Cochise County  \n",
-       "17    Coconino County  \n",
-       "18        Gila County  \n",
-       "19      Graham County  \n",
-       "20    Greenlee County  \n",
-       "21      La Paz County  \n",
-       "22    Maricopa County  \n",
-       "23      Mohave County  \n",
-       "24      Navajo County  \n",
-       "25        Pima County  \n",
-       "26       Pinal County  \n",
-       "27  Santa Cruz County  \n",
-       "28     Yavapai County  \n",
-       "29        Yuma County  "
+       "..                ...  \n",
+       "70        Pima County  \n",
+       "71       Pinal County  \n",
+       "72  Santa Cruz County  \n",
+       "73     Yavapai County  \n",
+       "74        Yuma County  \n",
+       "\n",
+       "[75 rows x 7 columns]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.concat([az2019_df, az2018_df], ignore_index=True)\n",
+    "df = pd.concat([az2019_df, az2018_df, az2017_df, az2016_df, az2015_df ], ignore_index=True)\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "fe17de7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(os.path.join(et.io.HOME,  'projects', 'Innovation-Summit-2024__11_Societal-adaptation-and-resilience-to-environmental-change', 'data'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "08578482",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/roma8902/projects/Innovation-Summit-2024__11_Societal-adaptation-and-resilience-to-environmental-change/code'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3678cf1e",
    "metadata": {},
    "outputs": [],
    "source": []
