--- a/code/changing_cost_of_sunbelt_population_changes_due_to_climate_change.ipynb
+++ b/code/changing_cost_of_sunbelt_population_changes_due_to_climate_change.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "a28b3ff0",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "0161340c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "e28fe537",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "14        Yuma County    027"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "8bd2a298",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "e4dea255",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "1c322e5a",
    "metadata": {},
    "outputs": [
@@ -432,7 +432,7 @@
        "14       Pinal County  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "id": "874011ea",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
        "14    027   212128  38.470979394  2018    04    Arizona        Yuma County"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "593454f5",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "bb40629b",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "[75 rows x 7 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,31 +868,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "fe17de7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(os.path.join(et.io.HOME,  'projects', 'Innovation-Summit-2024__11_Societal-adaptation-and-resilience-to-environmental-change', 'data'))"
+    "df.to_csv(os.path.join(et.io.HOME,  'projects', 'Innovation-Summit-2024__11_Societal-adaptation-and-resilience-to-environmental-change', 'data', 'population_by_county.csv'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "08578482",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/roma8902/projects/Innovation-Summit-2024__11_Societal-adaptation-and-resilience-to-environmental-change/code'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
